更新 package.json 檔，請 AI 移除非必要 Plugin

--- a/1. PRD.md
+++ b/1. PRD.md
@@ -4,6 +4,8 @@
 
 **Reliable Ann (防詐小安)** is a web template and LINE chatbot designed to educate users about scam prevention, embodying the supportive persona of a 17-year-old neighbor girl. The web template showcases 小安’s features, while the LINE Bot provides real-time scam identification, reporting guidance, emotional support, and fraud education.
 
+This project was built with DataButton.
+
 🌐 **Demo HomePage**: [https://www.reliableann.com/](https://www.reliableann.com/)
 🌐 [GPTs](https://chatgpt.com/g/g-67c6f94123908191b78d6bf552d0803f-fang-zha-xiao-an)
 
