--- a/3. HowToUse.md
+++ b/3. HowToUse.md
@@ -1,22 +1,22 @@
 # How to Use Reliable Ann (防詐小安)
 
-**Reliable Ann (防詐小安)** is a LINE chatbot designed to assist users in identifying scams, obtaining reporting guidance, receiving emotional support, and learning fraud prevention strategies. 小安 is here to guide you with care and empathy, like a trusted neighbor.
+**Reliable Ann (防詐小安)** is a LINE chatbot designed to assist users in identifying scams, obtaining reporting guidance, receiving emotional support, and learning fraud prevention strategies. Ann is here to guide you with care and empathy, like a trusted neighbor.
 
 🌐 **Demo HomePage**: [https://www.reliableann.com/](https://www.reliableann.com/)
 🌐 [GPTs](https://chatgpt.com/g/g-67c6f94123908191b78d6bf552d0803f-fang-zha-xiao-an)
 
 ## Step-by-Step Guide
 
-### 1. Add 小安 as a LINE Friend (if open in the future)
+### 1. Add 防詐小安 as a LINE Friend (if open in the future)
 
-Connect with 小安 on LINE to access her scam prevention tools. Choose one of these methods:
+Connect with 防詐小安 on LINE to access her scam prevention tools. Choose one of these methods:
 
 - **Scan QR Code** (Coming Soon):
   - Open the LINE app on your mobile device.
   - Go to **Home** > Tap the **Add Friends** icon > Select **QR Code**.
   - Scan the QR code (available soon on [https://www.reliableann.com/](https://www.reliableann.com/)).
 - **Search LINE ID** (Coming Soon):
-  - Search for 小安’s LINE ID (to be announced).
+  - Search for 防詐小安’s LINE ID (to be announced).
 - **Click Link** (Coming Soon):
   - Click the “Add Friend” button on the demo website to join directly.
 
@@ -26,11 +26,11 @@ Once 小安 is your LINE friend:
 
 - Forward suspicious messages, emails, or call details to 小安.
 - Describe the situation, e.g., “I got a message about a luxury prize, they asked me to click a link.”
-- 小安 will analyze the content and provide scam warnings (⚠️) or safety advice (✅), e.g., “This might be a phishing scam. Please don’t click the link.”
+- 防詐小安 will analyze the content and provide scam warnings (⚠️) or safety advice (✅), e.g., “This might be a phishing scam. Please don’t click the link.”
 
 ### 3. Get Instant Help
 
-小安 offers:
+防詐小安 offers:
 
 - **Scam Identification**: Detects potential scams like phishing, fake government calls, or romance scams.
 - **Reporting Guidance**: Clear steps, e.g., “Save chat logs, call the 165 hotline, contact your bank.”
@@ -50,7 +50,7 @@ For urgent assistance, call **165 Anti-Fraud Hotline** or **1995 Mental Health S
 
 ## Common Scam Types
 
-小安 helps identify these scams:
+防詐小安 helps identify these scams:
 
 - **Fake Government Calls**: Claiming you owe fines or have legal issues.
 - **Phishing**: Fake emails or links stealing your data.
